Compatibility with IP based access; Better docs

--- a/source/_config.yml
+++ b/source/_config.yml
@@ -9,3 +9,6 @@ destination: /path/to/deploy
 
 permalink: pretty
 paginate: 10
+
+# Uncomment the following, if you use a dedicated domain for Jekyll
+baseurl: /updates
